add restaurant search
