# src/routes/restaurant.ts
@@ -4,11 +4,13 @@ import {
   getFullRestaurant,
   getRestaurants,
   removeRestaurant,
+  searchRestaurants,
   updateRestaurant
 } from '../controllers/restaurant';
 import { isAdminMiddleWare } from '../middlewares/auth';
 import {
   validateCreateRestaurantBody,
+  validateRestaurantSearchQueryParameters,
   validateUpdateRestaurantBody
 } from '../middlewares/validators/restaurant-validator';
 import { getParameterObjectIdValidator } from '../middlewares/validators/common-validators';
@@ -17,8 +19,6 @@ export const restaurantRouter = Router();
 
 //@ts-ignore
 restaurantRouter.get('/', getRestaurants);
-//@ts-ignore
-restaurantRouter.get('/:id', getParameterObjectIdValidator('id'), getFullRestaurant);
 //@ts-ignore
 restaurantRouter.post('/', isAdminMiddleWare, validateCreateRestaurantBody, createNewRestaurant);
 //@ts-ignore
@@ -31,3 +31,7 @@ restaurantRouter.put(
   validateUpdateRestaurantBody,
   updateRestaurant
 );
+//@ts-ignore
+restaurantRouter.get('/search', validateRestaurantSearchQueryParameters, searchRestaurants);
+//@ts-ignore
+restaurantRouter.get('/search/:id', getParameterObjectIdValidator('id'), getFullRestaurant);
